--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,13 @@ on:
 jobs:
   run-uft-tests:
     runs-on: [self-hosted, Windows, X64]
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Run UFT One test
         run: |
-          "C:\\Program Files (x86)\\OpenText\\Functional Testing\\bin\\UFT.exe" -test "C:\\Users\\XL251307\\Desktop\\UFT_ONE_POC\\UFT_POC\\DataEnv" -run
+          "C:\Program Files (x86)\OpenText\Functional Testing\bin\UFT.exe" -test "C:\Users\XL251307\Desktop\UFT_ONE_POC\UFT_POC\DataEnv" -run
